Fix post spacing issue on index page
Post text would go out of the bounds of the container so increased the
width of the container by 5%

--- a/src/pages/blog.module.css
+++ b/src/pages/blog.module.css
@@ -455,7 +455,7 @@
 	}
 	.HomePost {
 		align-self: center;
-		width: 80%;
+		width: 82%;
 	}
 	.CheckOutPosts {
 		position: relative;
